HTTP server sort of finished + test pages

--- a/assignments/a06/test.html
+++ b/assignments/a06/test.html
@@ -1,11 +1,24 @@
 <html>
-    <head>
-        <title>
-            Test
-        </title>
-    </head>
 
-    <body>
-        This is a simple HTML response test page
-    </body>
+<head>
+    <title>
+        Test page
+    </title>
+</head>
+
+<body>
+    <h1>Test</h1>
+    <p>
+        This is a simple HTML response test page containing an image
+    </p>
+    <img src="Galileo.png">
+    <ul>
+        <li><a href="client-webint/index.html">Link to an existing resource</a></li>
+        <li><a href="testo.pdf">Link to a PDF</a></li>
+        <li><a href="errore">Link to a 404</a></li>
+        <li><a href="https://docs.oracle.com/en/java/javase/11/docs/api/index.html">Link to Java reference</a></li>
+    </ul>
+
+</body>
+
 </html>
